# camera-server

./: .env  .gitignore  Cargo.toml  Rocket.toml  diesel.toml  monitordevicesdb.sqlite
api-requests/: Register user.bru  User login.bru
migrations/2024-06-27-232646_init/: down.sql  up.sql
migrations/2024-07-02-211454_remove_tokens/: down.sql  up.sql
src/: auth.rs  main.rs  model.rs  schema.rs  tests_common.rs  user_routes.rs
src/device_connector/: mod.rs  packets.rs
